src/core-crm/objects/hed__Course_Offering__c/fields/Action_Required__c.field-meta.xml
<CustomField>
    <fullName>Action_Required__c</fullName>
    <inlineHelpText>Enter actions required</inlineHelpText>
    <label>Action Required</label>
    <length>75000</length>
    <type>Html</type>
</CustomField>