src/core-crm/objects/hed__Course_Offering__c/fields/Administrative_Support__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Support__c</fullName>
    <inlineHelpText>I am satisfied with the QUTeX administration support.</inlineHelpText>
    <label>Administrative Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>