src/core-crm/objects/hed__Course_Offering__c/fields/Content_Challenged_Thinking__c.field-meta.xml
<CustomField>
    <fullName>Content_Challenged_Thinking__c</fullName>
    <inlineHelpText>The course content challenged my thinking.</inlineHelpText>
    <label>Content Challenged Thinking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>