src/core-crm/objects/hed__Course_Offering__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <description>Code of related course</description>
    <formula>hed__Course__r.Course_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Code</label>
    <type>Text</type>
</CustomField>