src/core-crm/objects/hed__Course_Offering__c/fields/Delivery_Mode__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Mode__c</fullName>
    <description>The Delivery mode from SAMS</description>
    <label>Delivery Mode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>