src/core-crm/objects/hed__Course_Offering__c/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <description>This will be how the course will be delivered and location for face-to-face.</description>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Classroom</fullName>
            </value>
            <value>
                <fullName>Online Self-paced</fullName>
            </value>
            <value>
                <fullName>Brisbane Classroom</fullName>
            </value>
            <value>
                <fullName>Canberra Classroom</fullName>
            </value>
            <value>
                <fullName>Melbourne Classroom</fullName>
            </value>
            <value>
                <fullName>Sydney Classroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>