src/core-crm/objects/hed__Course_Offering__c/fields/Effective_Learning_Activities__c.field-meta.xml
<CustomField>
    <fullName>Effective_Learning_Activities__c</fullName>
    <inlineHelpText>The course activities were engaging and enhanced my learning.</inlineHelpText>
    <label>Effective Learning Activities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>