src/core-crm/objects/hed__Course_Offering__c/fields/Facilitator_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Knowledge__c</fullName>
    <inlineHelpText>The facilitator/s were knowledgeable on the subject and kept the course alive and interesting.</inlineHelpText>
    <label>Facilitator Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>