src/core-crm/objects/hed__Course_Offering__c/fields/isLMSTriggered__c.field-meta.xml
<CustomField>
    <fullName>isLMSTriggered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in LMSCourseOfferingBatchHandler to identify if record has been previously processed</description>
    <label>isLMSTriggered</label>
    <type>Checkbox</type>
</CustomField>