src/core-crm/objects/hed__Course_Offering__c/fields/LMS_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>LMS_Creation_Date__c</fullName>
    <description>Enter the date for LMS integration</description>
    <inlineHelpText>Enter the date for LMS integration</inlineHelpText>
    <label>LMS Creation Date</label>
    <type>Date</type>
</CustomField>