src/core-crm/objects/hed__Course_Offering__c/fields/LMS_Quality__c.field-meta.xml
<CustomField>
    <fullName>LMS_Quality__c</fullName>
    <inlineHelpText>The online learning platform was satisfactory.</inlineHelpText>
    <label>LMS Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>