src/core-crm/objects/hed__Course_Offering__c/fields/LMS_URL__c.field-meta.xml
<CustomField>
    <fullName>LMS_URL__c</fullName>
    <description>A URL to the Canvas site for this course offering</description>
    <label>LMS URL</label>
    <type>Url</type>
</CustomField>