src/core-crm/objects/hed__Course_Offering__c/fields/Minimum_Participants__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Participants__c</fullName>
    <label>Minimum Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>