src/core-crm/objects/hed__Course_Offering__c/fields/On_Hold_Seat__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Seat__c</fullName>
    <description>This will hold the unpaid seat that’s been checked out in the product catalogue.</description>
    <label>On Hold Seat</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>