src/core-crm/objects/hed__Course_Offering__c/fields/Primary_Delivery_Platform__c.field-meta.xml
<CustomField>
    <fullName>Primary_Delivery_Platform__c</fullName>
    <description>Primary delivery platform of related course</description>
    <formula>TEXT(hed__Course__r.Primary_Delivery_Platform__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Delivery Platform</label>
    <type>Text</type>
</CustomField>