src/core-crm/objects/hed__Course_Offering__c/fields/Primary_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Primary_Facilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Facilitator</label>
    <referenceTo>hed__Course_Enrollment__c</referenceTo>
    <relationshipLabel>Course Offerings</relationshipLabel>
    <relationshipName>Course_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>