src/core-crm/objects/hed__Course_Offering__c/fields/Registration_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_End_Date__c</fullName>
    <label>Registration End Date</label>
    <type>Date</type>
</CustomField>