src/core-crm/objects/hed__Course_Offering__c/fields/Registration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Start_Date__c</fullName>
    <label>Registration Start Date</label>
    <type>Date</type>
</CustomField>