src/core-crm/objects/hed__Course_Offering__c/fields/Total_Course_Connections__c.field-meta.xml
<CustomField>
    <fullName>Total_Course_Connections__c</fullName>
    <label>Total Course Connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>