src/core-crm/objects/hed__Course_Offering__c/fields/Total_Number_of_Registered_Learners__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Registered_Learners__c</fullName>
    <description>This is the total number of Enrolments where status != Cancelled.</description>
    <label>Total Number of Registered Learners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>