src/core-crm/objects/hed__Course_Offering__c/fields/Visible_on_Website__c.field-meta.xml
<CustomField>
    <fullName>Visible_on_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible on Website</label>
    <type>Checkbox</type>
</CustomField>