src/core-crm/objects/hed__Course_Offering__c/validationRules/End_Date_Not_Greater_Than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Not_Greater_Than_Start_Date</fullName>
    <active>true</active>
    <description>End Date should not be Greater than the Start Date</description>
    <errorConditionFormula>hed__End_Date__c  &lt;  hed__Start_Date__c</errorConditionFormula>
    <errorDisplayField>hed__End_Date__c</errorDisplayField>
    <errorMessage>End Date should not be greater than Start Date</errorMessage>
</ValidationRule>