src/core-crm/objects/hed__Course_Offering__c/validationRules/Registration_Date_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_Date_Rule</fullName>
    <active>true</active>
    <description>Registration End Date should be equal to or greater than Registration Start Date</description>
    <errorConditionFormula>Registration_End_Date__c &lt;  Registration_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Registration_End_Date__c</errorDisplayField>
    <errorMessage>Registration End Date should be equal to or greater than Registration Start Date</errorMessage>
</ValidationRule>